--- a/web/src/pages/loginPage.css
+++ b/web/src/pages/loginPage.css
@@ -1,6 +1,6 @@
 @media all and (min-width: 320px) {
   body {
-    background-color: dimgray;
+    background-image: url(https://i.redd.it/klttow3qk2e41.jpg);
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
