--- a/web/src/pages/loginPage.css
+++ b/web/src/pages/loginPage.css
@@ -6,20 +6,27 @@
     background-repeat: no-repeat;
     padding: 16px;
   }
-  .Login {
-      padding: 30px 0;
-    }
-  
-    .Login form {
-      margin: 0 auto;
-      max-width: 320px;
-    }
 
-   .logo_container img {
+  .Login {
+    padding: 30px 0;
+  }
+
+  .Login form {
+    margin: 0 auto;
+    max-width: 320px;
+  }
+
+  .logo_container img {
     display: block;
     margin: 0 auto;
     max-width: 320px;
     height: auto;
-    }
-
   }
+
+  .RedirectButton {
+    margin: 0 auto;
+    max-width: 320px;
+    padding: 30px 0;
+    height: auto;
+  }
+}
