--- a/web/src/component/eventCard.css
+++ b/web/src/component/eventCard.css
@@ -1,7 +1,7 @@
 @media all and (min-width: 320px) {
     body {
     background-color: #B3E5FC;
-    border-radius: 10px
+    border-radius: 10px;
     }
 
     .card {
