added navbar to pages and tabbed events

--- a/web/src/styles/main.css
+++ b/web/src/styles/main.css
@@ -1,27 +1,27 @@
-p  {
-    color: Lime;
-    Font-weight: 800;
+p {
+  color: white;
+  font-weight: 800;
 }
 
 .search {
-   display: flex;
-   align-self: center;
+  display: flex;
+  align-self: center;
 }
 
 .searchfilter {
-    flex-direction: column;
-    font-weight: 400;
-    align-self: flex-end;
+  flex-direction: column;
+  font-weight: 400;
+  align-self: flex-end;
 }
 
 .searchcontent {
-    width: 200px;
-    border: 2px solid black;
-    resize: none;
-    font-size: smaller;
+  width: 200px;
+  border: 2px solid black;
+  resize: none;
+  font-size: smaller;
 }
 
 .searchsubmit {
-    width: relative;
-    font-size: smaller;
+  width: relative;
+  font-size: smaller;
 }
